changement de gitfirt par git(0)